Added repository to gradle
I'm facing a problem while building today and i had to add the repositories google and mavenCentral to fix the problem.

Build error:
```
A problem occurred evaluating project ':app'.
> Could not resolve all files for configuration 'classpath'.
   > Could not find any matches for com.android.tools.build:gradle:2.3.+ as no versions of com.android.tools.build:gradle are available.
     Searched in the following locations:
         https://jcenter.bintray.com/com/android/tools/build/gradle/maven-metadata.xml
         https://jcenter.bintray.com/com/android/tools/build/gradle/
         file:/Users/igortrindade/.m2/repository/com/android/tools/build/gradle/maven-metadata.xml
         file:/Users/igortrindade/.m2/repository/com/android/tools/build/gradle/
     Required by:
         unspecified:unspecified:unspecified
   > Could not find any matches for com.google.gms:google-services:3.1.+ as no versions of com.google.gms:google-services are available.
     Searched in the following locations:
         https://jcenter.bintray.com/com/google/gms/google-services/maven-metadata.xml
         https://jcenter.bintray.com/com/google/gms/google-services/
         file:/Users/igortrindade/.m2/repository/com/google/gms/google-services/maven-metadata.xml
         file:/Users/igortrindade/.m2/repository/com/google/gms/google-services/
     Required by:
         unspecified:unspecified:unspecified

* Try:
```

--- a/src/android/FirebaseExtendedNotification.gradle
+++ b/src/android/FirebaseExtendedNotification.gradle
@@ -2,6 +2,8 @@ buildscript {
     repositories {
         jcenter()
         mavenLocal()
+        mavenCentral()
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.+'
